@@ -17,6 +17,7 @@
   * Add Enumerable#keys
   * Add Enumerable#values
   * Add Enumerable#values_at
+  * Add Enumerable#shift
 
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
